--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 #grid {
     flex-direction: column;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 .row {
@@ -13,7 +13,7 @@
 }
 
 .cell {
-    border: 1px solid black;
+    border: 1px solid #DDDDDD;
 }
 
 .on {
@@ -21,5 +21,5 @@
 }
 
 #changeSizeBtn {
-    margin-top: 5%;
+    margin-top: 2%;
 }
